AD-2003-08-08-0: Bugfix:    Darwin: use 'pid_t' for typedef of 'JobID_t'
                 Changed:   sgedefs.h
                 Review:    

SG-2003-08-05-0: Bugfix:    The profiling worked only in the first scheduling run.
                            An error occured in the second run, which turned the
                            profiling of.

                 Changed:   sge_schedd
                 Review:    AA

SG-2003-08-01-1: Bugfix:    All queues for a host in qmon changed into the alarm 
                            state, when the host complexes for the hast were 
                            changed via qmon (only until the next update).

                 Changed:   qmon
                 Review:    AA

SG-2003-08-01-0: Bugfix:    - all queues changed into the alarm state, when
                            the complex list was changed via qconf and the
                            qmon queue window was open.
                            - when the qmom queue window and the complex window
                            overlaped and the complex window is closed with commit, 
                            than all queues in the area behind complex window changed 
                            into the alarm state.

                 Changed:   qmon
                 Review:    AA

AH-2003-08-01-1: Enhancem.  Added integration package for tight integration
                            with Sun HPC ClusterTools 5
                            Enhanced distinst to install tight integration
                 Review:    AA

SG-2003-07-31-0: Bugfix:    global load value not working as load_threshold

                 Changed:   sge_schedd, qstat, qmon, qhost
                 Issue:     589
                 Review:    AH

AH-2003-07-31-0  CVS:       Created VMAIN_STABLE_3_TAG

AA-2003-07-30-0: Bugfix:    qmon_cplx: selectAttributes callback was missing,
                            CQ_Type list added
                            libs/sgeobj/Makefile delete generated sge_sub_obj.c
